flower corner down

--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -30,9 +30,11 @@ footer {
   position: absolute;
   width: 80%;
 }
+.sctn .abs {
+  position: absolute;
+}
 .sctn .flower-container {
   width: 45%;
-  position: absolute;
   top: -1rem;
   right: -1rem;
 }
@@ -40,7 +42,6 @@ footer {
   bottom: 39%;
   left: 13%;
   width: 8%;
-  position: absolute;
   animation: leaves 9s alternate-reverse infinite ease-in;
   transform-origin: bottom center;
 }
@@ -48,21 +49,49 @@ footer {
   bottom: 21%;
   right: 8.2%;
   width: 25%;
-  position: absolute;
   animation: leaves2 10s alternate infinite ease-in;
   transform-origin: bottom center;
 }
-.sctn .leave-5 {
-  width: 70%;
-  bottom: -5%;
-  left: -9%;
-  transform: rotate(10deg);
+.sctn .flower-container-2 {
+  z-index: 10;
+  width: 15%;
+  bottom: -15%;
+  left: 8%;
 }
-.sctn .leave-6 {
-  width: 70%;
-  top: -5%;
-  right: -10%;
-  transform: rotate(185deg);
+.sctn .flower-container-2 .capullo-3 {
+  width: 130%;
+  left: -65%;
+  top: -19%;
+  animation: leaves3 10s alternate infinite ease-in;
+  transform-origin: center;
+}
+.sctn .flower-container-2 .capullo-4 {
+  width: 120%;
+  left: 32%;
+  bottom: 65%;
+  animation: leaves3 14s alternate-reverse infinite ease-in-out;
+  transform-origin: center bottom;
+}
+.sctn .flower-container-2 .leave-right-down {
+  width: 38%;
+  top: 2%;
+  left: -30%;
+  animation: leaves4 8s alternate infinite ease-in-out;
+  transform-origin: bottom right;
+}
+.sctn .flower-container-2 .leave-right-down-left {
+  width: 30%;
+  top: 25%;
+  left: 10%;
+  animation: leaves5 8s alternate infinite ease-in-out;
+  transform-origin: bottom right;
+}
+.sctn .flower-container-2 .leave-left-down-left {
+  width: 65%;
+  top: 40%;
+  left: 25%;
+  animation: leaves6 8s alternate infinite ease-in-out;
+  transform-origin: bottom right;
 }
 .sctn .first-container {
   text-align: center;
@@ -145,6 +174,50 @@ footer {
   }
   50% {
     transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-20deg);
+  }
+}
+@keyframes leaves3 {
+  0% {
+    transform: rotate(9deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-9deg);
+  }
+}
+@keyframes leaves4 {
+  0% {
+    transform: rotate(-25deg);
+  }
+  50% {
+    transform: rotate(-18deg);
+  }
+  100% {
+    transform: rotate(-25deg);
+  }
+}
+@keyframes leaves5 {
+  0% {
+    transform: rotate(20deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(20deg);
+  }
+}
+@keyframes leaves6 {
+  0% {
+    transform: rotate(-20deg);
+  }
+  50% {
+    transform: rotate(-10deg);
   }
   100% {
     transform: rotate(-20deg);
