flower corner down

--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -126,8 +126,14 @@ $background_2:#E5DED9;
             transform-origin: bottom right;
             
         }
-        
+
     }
+    .watercolor1{
+        width: 80%;
+        top: -20%;
+        right: -10%;
+    }
+    
 
 
     .first-container{
