--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -93,6 +93,11 @@ footer {
   animation: leaves6 8s alternate infinite ease-in-out;
   transform-origin: bottom right;
 }
+.sctn .watercolor1 {
+  width: 80%;
+  top: -20%;
+  right: -10%;
+}
 .sctn .first-container {
   text-align: center;
   display: grid;
