--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -7,8 +7,8 @@
 }
 
 body{
-    // background-color: rgb(245, 244, 244);
-    background-color: #E2D7D5;
+    background-color: rgb(245, 244, 244);
+
 }
 
 section{
@@ -133,6 +133,11 @@ $background_2:#E5DED9;
         width: 80%;
         top: -20%;
         right: -10%;
+    }
+    .watercolor2{
+        width: 100%;
+        bottom: -20%;
+        left: -12%;
     }
     
 
