--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -103,9 +103,14 @@ footer {
   bottom: -20%;
   left: -12%;
 }
+.sctn .watercolor3 {
+  width: 100%;
+  opacity: 0.5;
+}
 .sctn .first-container {
   text-align: center;
   display: grid;
+  z-index: 100;
 }
 .sctn .first-container .reason {
   position: relative;
