--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -26,10 +26,6 @@ footer {
   display: grid;
   place-items: center;
 }
-.sctn .arrow {
-  position: absolute;
-  width: 60%;
-}
 .sctn .abs {
   position: absolute;
 }
@@ -105,25 +101,37 @@ footer {
 }
 .sctn .watercolor3 {
   width: 130%;
-  opacity: 0.5;
+  opacity: 0.8;
 }
-.sctn .first-container {
+.sctn .content {
+  z-index: 100;
+  background-color: rgba(255, 255, 255, 0.61);
+  width: 90;
+  height: 70%;
+}
+.sctn .content .first-container {
+  display: grid;
+  place-items: center;
   text-align: center;
   display: grid;
-  z-index: 100;
+  width: 100%;
 }
-.sctn .first-container .reason {
-  position: relative;
+.sctn .content .first-container .arrow {
+  position: absolute;
+  width: 80%;
+}
+.sctn .content .first-container .reason {
+  width: 70%;
   place-self: center;
   top: 0.5rem;
   font-family: "Work Sans";
   font-size: 1rem;
   font-weight: 300;
 }
-.sctn .first-container .reason::first-letter {
+.sctn .content .first-container .reason::first-letter {
   text-transform: uppercase;
 }
-.sctn .first-container .main-text {
+.sctn .content .first-container .main-text {
   display: grid;
   grid-template-rows: repeat(auto-fill, 3fr);
   justify-content: center;
@@ -133,17 +141,17 @@ footer {
   font-size: 5rem;
   font-weight: 100;
 }
-.sctn .first-container .main-text .y {
+.sctn .content .first-container .main-text .y {
   font-size: 3rem;
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
 }
-.sctn .first-container .text-card_container .intro {
+.sctn .content .first-container .text-card_container .intro {
   font-family: "Work Sans";
   padding-bottom: 1.5rem;
   font-weight: 300;
 }
-.sctn .first-container .text-card_container .main-tittle {
+.sctn .content .first-container .text-card_container .main-tittle {
   color: rgb(184, 168, 83);
   font-family: "Parisienne", cursive;
   font-size: 5rem;
@@ -151,14 +159,14 @@ footer {
   line-height: 0.6;
   font-weight: 100;
 }
-.sctn .first-container .text-card_container .main-tittle .middle {
+.sctn .content .first-container .text-card_container .main-tittle .middle {
   font-size: 3.5rem;
 }
-.sctn .first-container .img-card_container {
+.sctn .content .first-container .img-card_container {
   display: flex;
   height: 100%;
 }
-.sctn .first-container .img-card_container .img-card {
+.sctn .content .first-container .img-card_container .img-card {
   object-fit: cover;
   width: 100%;
 }
