--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -38,11 +38,6 @@ $background_2:#E5DED9;
     display: grid;
     place-items: center;
 
-    .arrow{
-        position: absolute;
-        width: 60%;
-    }
-
     .abs{
         position: absolute;
 
@@ -145,76 +140,92 @@ $background_2:#E5DED9;
     
     .watercolor3{
         width: 130%;
-        opacity: .5;
+        opacity: .8;
         // bottom: -20%;
         // left: -12%;
     }
     
 
-
-    .first-container{
-        text-align: center;
-        display: grid;
+    .content{
         z-index: 100;
+        background-color: rgba(255, 255, 255, 0.61);
+        width: 90;
+        height: 70%;
+        // margin:;
         
-        .reason{
-            position: relative;
-            place-self: center;
-            top: .5rem;
-            font-family: $work-sans;
-            font-size: 1rem;
-            font-weight: 300;
-            &::first-letter{
-                text-transform: uppercase;
-            }
-        }
-
-        .main-text{
+        .first-container{
             display: grid;
-            grid-template-rows: repeat(auto-fill, 3fr);
-            justify-content: center;
-            align-items: center;
-            font-family: $parisiene;
-            text-transform: capitalize;
-            font-size: 5rem;
-            font-weight: 100;
-            // line-height: .8;
-            
-            
-            .y{ //span
-                font-size: 3rem;   
-                margin-top: -.5rem;   
-                margin-bottom: -.5rem;   
-            }
-        }
+            place-items: center;
+            text-align: center;
+            display: grid;
+            width: 100%;
 
-        .text-card_container{
-            .intro{
-                font-family: $work-sans;
-                padding-bottom: 1.5rem;
-                font-weight: 300;
+            .arrow{
+                position: absolute;
+                width: 80%;
             }
-            // display: grid;
             
-            .main-tittle{
-                color:  rgb(184, 168, 83);
-                font-family: $parisiene;
-                font-size: 5rem;
-                text-align: center;
-                line-height: .6;
-                font-weight: 100;
-    
-                .middle{
-                    font-size: 3.5rem;
+            .reason{
+                // position: relative;
+                width: 70%;
+                place-self: center;
+                top: .5rem;
+                font-family: $work-sans;
+                font-size: 1rem;
+                font-weight: 300;
+                &::first-letter{
+                    text-transform: uppercase;
                 }
             }
-        }
-        .img-card_container{
-            display: flex;
-            height: 100%;
-            .img-card{
-                object-fit: cover;
-                width: 100%;
+    
+            .main-text{
+                // height: min-content;
+                display: grid;
+                grid-template-rows: repeat(auto-fill, 3fr);
+                justify-content: center;
+                align-items: center;
+                font-family: $parisiene;
+                text-transform: capitalize;
+                font-size: 5rem;
+                font-weight: 100;
+                // line-height: .8;
+                
+                
+                .y{ //span
+                    font-size: 3rem;   
+                    margin-top: -.5rem;   
+                    margin-bottom: -.5rem;   
+                }
+            }
+    
+            .text-card_container{
+                .intro{
+                    font-family: $work-sans;
+                    padding-bottom: 1.5rem;
+                    font-weight: 300;
+                }
+                // display: grid;
+                
+                .main-tittle{
+                    color:  rgb(184, 168, 83);
+                    font-family: $parisiene;
+                    font-size: 5rem;
+                    text-align: center;
+                    line-height: .6;
+                    font-weight: 100;
+        
+                    .middle{
+                        font-size: 3.5rem;
+                    }
+                }
+            }
+            .img-card_container{
+                display: flex;
+                height: 100%;
+                .img-card{
+                    object-fit: cover;
+                    width: 100%;
+                }
             }
         }
     }
