--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -108,6 +108,7 @@ footer {
   background-color: rgba(255, 255, 255, 0.61);
   width: 90;
   height: 70%;
+  border: goldenrod 5px;
 }
 .sctn .content .first-container {
   display: grid;
