--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -151,7 +151,8 @@ $background_2:#E5DED9;
         background-color: rgba(255, 255, 255, 0.61);
         width: 90;
         height: 70%;
-        border: goldenrod 5px;
+        border-color: goldenrod;
+        border-width: 5px;
         // margin:;
         
         .first-container{
