--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -105,6 +105,8 @@ footer {
 }
 .sctn .content {
   z-index: 100;
+  display: grid;
+  place-items: center;
   background-color: rgba(255, 255, 255, 0.61);
   width: 90;
   height: 70%;
