--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -148,6 +148,8 @@ $background_2:#E5DED9;
 
     .content{
         z-index: 100;
+        display: grid;
+        place-items: center;
         background-color: rgba(255, 255, 255, 0.61);
         width: 90;
         height: 70%;
