--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -154,7 +154,7 @@ $background_2:#E5DED9;
         width: 90;
         height: 70%;
         border-color: goldenrod;
-        border-width: 5px;
+        border-width: .5rem;
         // margin:;
         
         .first-container{
