--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -137,6 +137,7 @@ footer {
   text-transform: uppercase;
 }
 .sctn .content .first-container .main-text {
+  color: #AD8555;
   display: grid;
   grid-template-rows: repeat(auto-fill, 3fr);
   justify-content: center;
@@ -147,6 +148,7 @@ footer {
   font-weight: 100;
 }
 .sctn .content .first-container .main-text .y {
+  color: #202020;
   font-size: 3rem;
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
