--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -184,6 +184,7 @@ $background_2:#E5DED9;
     
             .main-text{
                 // height: min-content;
+                color: #AD8555;
                 display: grid;
                 grid-template-rows: repeat(auto-fill, 3fr);
                 justify-content: center;
@@ -196,6 +197,7 @@ $background_2:#E5DED9;
                 
                 
                 .y{ //span
+                    color: #202020;
                     font-size: 3rem;   
                     margin-top: -.5rem;   
                     margin-bottom: -.5rem;   
