--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -6,6 +6,15 @@
     box-sizing: border-box;
 }
 
+$work-sans:'Work Sans';
+$Nova: 'Nova Square', cursive;
+$Passion: 'Passions Conflict', cursive;
+$Zen: 'Zen Dots', cursive;
+$parisiene: 'Parisienne', cursive;
+$main-color:#701717;
+$background_1:#fffdf4;
+$background_2:#E5DED9;
+
 body{
     background-color: rgb(245, 244, 244);
 
@@ -21,14 +30,12 @@ footer{
 
 }
 
-$work-sans:'Work Sans';
-$Nova: 'Nova Square', cursive;
-$Passion: 'Passions Conflict', cursive;
-$Zen: 'Zen Dots', cursive;
-$parisiene: 'Parisienne', cursive;
-$main-color:#701717;
-$background_1:#fffdf4;
-$background_2:#E5DED9;
+h2{
+    font-family: $work-sans;
+    text-transform: capitalize;
+    font-weight: 350;
+}
+
 
 
 .sctn{
@@ -51,7 +58,7 @@ $background_2:#E5DED9;
         
         .capullo-1{
             bottom: 39%;
-            left: 12%;
+            left: 13%;
             width: 10%;
             // position: absolute;
             animation: leaves  9s alternate-reverse  infinite ease-in;
@@ -61,7 +68,7 @@ $background_2:#E5DED9;
         
         .capullo-2{
             bottom: 21%;
-            right: 5.7%;
+            right: 5.5%;
             width: 30%;
             // position: absolute;
             animation: leaves2 10s alternate infinite ease-in;
@@ -198,10 +205,10 @@ $background_2:#E5DED9;
                 
                 
                 .y{ //span
-                    color: #202020;
+                    // color: #202020;
                     font-size: 3rem;   
-                    margin-top: -.5rem;   
-                    margin-bottom: -.5rem;   
+                    margin-top: -1.5rem;   
+                    margin-bottom: -1.5rem;   
                 }
             }
     
@@ -262,7 +269,101 @@ $background_2:#E5DED9;
         }
     }
 
+// ===================== SECOND SECTION ===========================
+    .corner-1-sctn-2{
+        width: 100%;
+        top: -4rem;
+        left: -4rem;
+    }
+    
+    .bottom-sctn-2{
+        width: 130%;
+        bottom: -3.5rem;
+
+    }
+
+    .sctn-2_flowers{
+        z-index: 10;
+        width: 50%;
+        bottom: -5%;
+        right: -3%;
+
+
+        // .sctn-2_flwr1{
+        //     // width: 100%;
+        // }
+        .sctn-2_flwr2{
+            width: 45%;
+            // top: 100%;
+            right: 53%;
+            bottom: 8%;
+        }
+        .sctn-2_flwr3{
+            width: 12%;
+            // top: 100%;
+            right: 50%;
+            bottom: 50%;
+        }
+        .sctn-2_flwr4{
+            width: 35%;
+            // top: 100%;
+            left: 2%;
+            bottom: 55%;
+        }
+        .sctn-2_flwr5{
+            width: 35%;
+            // top: 100%;
+            right: 22.5%;
+            top: -7%;
+        }
+        .sctn-2_flwr6{
+            width: 8%;
+            // top: 100%;
+            right: 38%;
+            top: 18%;
+        }
+        .sctn-2_flwr7{
+            width: 10%;
+            // top: 100%;
+            right: 27%;
+            top: 25%;
+        }
+        .sctn-2_flwr8{
+            width: 15%;
+            // top: 100%;
+            right: 7%;
+            bottom: 35%;
+        }
+    }
+
+
+
+    .container-2{
+        display: grid;
+        place-items: center;
+        width: 90%;
+        margin: 0 auto;
+
+        .sub-content{
+            width: 80%;
+            border-radius: 50%;
+            overflow: hidden;
+            object-fit: cover;
+            object-position: -70% 150%;
+            aspect-ratio: 1; 
+            
+            .couple{
+                // height: 100%;
+                width: 130%;
+                opacity: .8;
+                transform: translate(-22%, -20%) scale(1.5);
+            }
+        }
+    }
+
 }
+
+
 
 .footer-section{
     // position: relative;
