--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -129,16 +129,17 @@ h2 {
 }
 .sctn .content .first-container .arrow {
   position: absolute;
-  max-width: 50%;
-  transform: rotate(45deg);
+  transform: translateY(0.25%);
+  max-width: 80%;
 }
 .sctn .content .first-container .reason {
   width: 70%;
   place-self: center;
   top: 0.5rem;
+  color: #3f3f3f;
   font-family: "Work Sans";
   font-size: 1.5rem;
-  font-weight: 300;
+  font-weight: 400;
 }
 .sctn .content .first-container .reason::first-letter {
   text-transform: uppercase;
@@ -151,7 +152,7 @@ h2 {
   align-items: center;
   font-family: "Parisienne", cursive;
   text-transform: capitalize;
-  font-size: 5rem;
+  font-size: 5.5rem;
   font-weight: 100;
 }
 .sctn .content .first-container .main-text .y {
@@ -184,8 +185,8 @@ h2 {
   width: 100%;
 }
 .sctn .content .first-container .date {
-  font-size: 1.25rem;
-  font-weight: 300;
+  font-size: 1rem;
+  font-weight: 400;
   font-family: "Work Sans";
   text-align: center;
   display: grid;
@@ -231,7 +232,7 @@ h2 {
 }
 .sctn .sctn-2_flowers .sctn-2_flwr4 {
   width: 35%;
-  left: 2%;
+  left: 1.5%;
   bottom: 55%;
 }
 .sctn .sctn-2_flowers .sctn-2_flwr5 {
@@ -261,17 +262,14 @@ h2 {
   margin: 0 auto;
 }
 .sctn .container-2 .sub-content {
-  width: 80%;
-  border-radius: 50%;
+  width: 90%;
   overflow: hidden;
   object-fit: cover;
   object-position: -70% 150%;
-  aspect-ratio: 1;
 }
-.sctn .container-2 .sub-content .couple {
-  width: 130%;
-  opacity: 0.8;
-  transform: translate(-22%, -20%) scale(1.5);
+.sctn .container-2 .sub-content .brush {
+  width: 100%;
+  fill: url(../../couple/IMG-20230108-WA0002.jpg);
 }
 
 .footer-section {
