--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -6,10 +6,6 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: rgb(245, 244, 244);
-}
-
 section {
   height: 100vh;
 }
@@ -114,23 +110,27 @@ h2 {
   z-index: 100;
   display: grid;
   place-items: center;
-  background-color: rgba(255, 255, 255, 0.788);
-  width: 90;
+  justify-content: center;
+  align-items: center;
+  width: 90% !important;
   height: 70%;
-  border-color: goldenrod;
-  border-width: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.712);
+  margin: 0 auto;
 }
 .sctn .content .first-container {
   display: grid;
   place-items: center;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   display: grid;
-  width: 100%;
+  width: 90%;
 }
 .sctn .content .first-container .arrow {
   position: absolute;
   transform: translateY(0.25%);
   max-width: 80%;
+  place-self: center;
 }
 .sctn .content .first-container .reason {
   width: 70%;
@@ -168,7 +168,7 @@ h2 {
 .sctn .content .first-container .text-card_container .main-tittle {
   color: rgb(184, 168, 83);
   font-family: "Parisienne", cursive;
-  font-size: 5rem;
+  font-size: 5.5rem;
   text-align: center;
   line-height: 0.6;
   font-weight: 100;
@@ -191,8 +191,9 @@ h2 {
   text-align: center;
   display: grid;
   grid-auto-flow: column;
-  place-items: center;
-  width: 80%;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
 }
 .sctn .content .first-container .date .separator {
   display: block;
@@ -204,6 +205,13 @@ h2 {
   text-transform: capitalize;
   display: grid;
   grid-auto-flow: row;
+}
+.sctn .content .first-container .city {
+  font-size: 1rem;
+  font-weight: 400;
+  margin-top: 1rem;
+  font-family: "Work Sans";
+  color: #3f3f3f;
 }
 .sctn .corner-1-sctn-2 {
   width: 100%;
@@ -263,13 +271,16 @@ h2 {
 }
 .sctn .container-2 .sub-content {
   width: 90%;
+  border-radius: 50%;
   overflow: hidden;
   object-fit: cover;
   object-position: -70% 150%;
+  aspect-ratio: 1;
 }
-.sctn .container-2 .sub-content .brush {
-  width: 100%;
-  fill: url(../../couple/IMG-20230108-WA0002.jpg);
+.sctn .container-2 .sub-content .couple {
+  width: 130%;
+  opacity: 0.8;
+  transform: translate(-22%, -20%) scale(1.5);
 }
 
 .footer-section {
