--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -118,22 +118,16 @@ h2 {
   margin: 0 auto;
 }
 .sctn .content .first-container {
+  position: relative;
   display: grid;
   place-items: center;
   justify-content: center;
   align-items: center;
   text-align: center;
-  display: grid;
   width: 90%;
-}
-.sctn .content .first-container .arrow {
-  position: absolute;
-  transform: translateY(0.25%);
-  max-width: 80%;
-  place-self: center;
 }
 .sctn .content .first-container .reason {
-  width: 90%;
+  width: 100%;
   place-self: center;
   top: 0.5rem;
   color: #3f3f3f;
@@ -156,9 +150,18 @@ h2 {
   font-weight: 100;
 }
 .sctn .content .first-container .main-text .y {
+  position: relative;
   font-size: 3rem;
   margin-top: -1.5rem;
   margin-bottom: -1.5rem;
+  display: grid;
+  place-items: center;
+}
+.sctn .content .first-container .main-text .y .arrow {
+  position: absolute;
+  width: 130%;
+  place-self: center;
+  top: 50%;
 }
 .sctn .content .first-container .text-card_container .intro {
   font-family: "Work Sans";
@@ -194,6 +197,7 @@ h2 {
   justify-content: center;
   align-items: center;
   width: 90%;
+  color: #202020;
 }
 .sctn .content .first-container .date .separator {
   display: block;
@@ -211,7 +215,7 @@ h2 {
   font-size: 1rem;
   margin-top: 1rem;
   font-family: "Work Sans";
-  color: #3f3f3f;
+  color: #202020;
 }
 .sctn .corner-1-sctn-2 {
   width: 100%;
