--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -163,26 +163,19 @@ h2{
         margin:0 auto;
         
         .first-container{
+            position: relative;
             // height: 70%;
             display: grid;
             place-items: center;
             justify-content: center;
             align-items: center;
             text-align: center;
-            display: grid;
             width: 90%;
 
-            .arrow{
-                position: absolute;
-                transform: translateY(.25%);
-                max-width: 80%;
-                place-self: center;
-                // transform: rotate(45deg);
-            }
-            
+
             .reason{
                 // position: relative;
-                width: 90%;
+                width: 100%;
                 place-self: center;
                 top: .5rem;
                 color: #3f3f3f;
@@ -210,9 +203,23 @@ h2{
                 
                 .y{ //span
                     // color: #202020;
+                    position: relative;
                     font-size: 3rem;   
                     margin-top: -1.5rem;   
                     margin-bottom: -1.5rem;   
+                    display: grid;
+                    place-items: center;
+
+                    .arrow{
+                        // display: grid;
+                        position: absolute;
+                        // transform: translateY(100%);
+                        width: 130%;
+                        place-self: center;
+                        top: 50%;
+                        // transform: rotate(45deg);
+                    }
+                    
                 }
             }
     
@@ -256,6 +263,7 @@ h2{
                 justify-content: center;
                 align-items: center;
                 width: 90%;
+                color: #202020;
         
                 .separator{
                     display: block;
@@ -278,7 +286,7 @@ h2{
                 // font-weight: 400;
                 margin-top: 1rem;
                 font-family: $work-sans;
-                color: #3f3f3f;
+                color: #202020;
             }
         }
     }
