--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -31,6 +31,10 @@ h2{
     font-weight: 350;
 }
 
+li{
+    list-style: none;
+}
+
 
 
 .sctn{
@@ -162,7 +166,7 @@ h2{
         align-items: center;
         width: 90% !important;
         height: 70%;
-        background-color: rgba(255, 255, 255, 0.712);
+        background-color: rgba(255, 255, 255, 0.8);
 
         // border-color: goldenrod;
         // border-width: .5rem;
@@ -387,7 +391,86 @@ h2{
 
         }
     }
+
+    .content_sect3{
+        display: grid;
+        place-items: center;
+        width: 90%;
+
+        .dress_icon{
+            max-width: 18%;
+            fill: #202020;
+
+        }
+
+        .dresscode{
+            margin-top: 1rem;
+            padding: .5rem 1rem;
+            background-color: #ee8484;
+            font-weight: 300;
+            text-align: center;
+            font-size: 1.75rem;
+        }
+
+        .half{
+            display: grid;
+            grid-auto-flow: column;
+            width: 95%;
+            margin-top: 2rem;
+
+
+            .line__container{
+                display: grid;
+                place-items: center;
+
+
+                .line{
+                    display: block;
+                    width: 1px;
+                    height:calc(100% + .10rem);
+                    background-color: #202020;
+                    transform: translate(6px, -5px);
+                }
+            }
+
+            .men, .women{
+                font-family: $work-sans;
+                ul{
+                    padding: 0;
+                    display: grid;
+                    place-items: center;
+                    text-transform: capitalize;
+                    h3{
+                        margin-bottom: .75rem;
+                        color: #202020;
+                        font-size: 1.5rem;
+                    }
+                }
+                li{
+                    text-align: center;
+                    font-size: 1.25rem;
+                    font-weight: 300;
+                }
+            }
+
+        }
+        h3{
+            font-family: $work-sans;
+            font-weight: 400;
+            font-size: 1.25rem;
+            &::first-letter{
+                text-transform: uppercase;
+            }
+        }
+        .reserva_color{
+            margin-top: 1.5rem;
+        }
+        
+        
+        
+    }
 }
+
 
 .familyName{
     position: absolute;
