--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -45,6 +45,7 @@ li{
     place-items: center;
 
     .familyName{
+        font-size: 1.5rem;
         background: $background_1;
         padding: .5rem 1rem;
         margin-top: 1rem;
