--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -33,12 +33,14 @@ li {
   place-items: center;
 }
 .sctn .familyName {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   background: #fffdf4;
   padding: 0.5rem 1rem;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   text-transform: capitalize;
   font-family: "Work Sans";
+  color: #3f3f3f;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
 }
 .sctn .abs {
   position: absolute;
