--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -328,8 +328,8 @@ li{
 
     .sctn-2_flowers{
         z-index: 10;
-        width: 50%;
-        bottom: -5%;
+        width: 45%;
+        bottom: 0;
         right: -3%;
 
         .sctn-2_flwr2{
