--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -243,8 +243,8 @@ li {
 }
 .sctn .sctn-2_flowers {
   z-index: 10;
-  width: 50%;
-  bottom: -5%;
+  width: 45%;
+  bottom: 0;
   right: -3%;
 }
 .sctn .sctn-2_flowers .sctn-2_flwr2 {
