--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -421,7 +421,7 @@ li{
         .dresscode{
             margin-top: 1rem;
             padding: .5rem 1rem;
-            background-color: #af4154;
+            background-color: #f3adb9;
             // background-color: #af415375;
             font-weight: 300;
             text-align: center;
