--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -313,7 +313,7 @@ li {
 .sctn .content_sect3 .dresscode {
   margin-top: 1rem;
   padding: 0.5rem 1rem;
-  background-color: #af4154;
+  background-color: #f3adb9;
   font-weight: 300;
   text-align: center;
   font-size: 1.75rem;
