--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -385,18 +385,20 @@ li{
         margin: 0 auto;
 
         .sub-content{
-            width: 90%;
-            border-radius: 50%;
-            overflow: hidden;
-            object-fit: cover;
-            object-position: -70% 150%;
-            aspect-ratio: 1; 
+            display: grid;
+            place-items: center;
+            // width: 100%;
+            // border-radius: 50%;
+            // overflow: hidden;
+            // object-fit: cover;
+            // object-position: -70% 150%;
+            // aspect-ratio: 1; 
             
             .couple{
                 // height: 100%;
-                width: 130%;
-                opacity: .8;
-                transform: translate(-22%, -20%) scale(1.5);
+                width: 115%;
+                opacity: .85;
+                // transform: translate(-22%, -20%) scale(1.5);
             }
             // .brush{
             //     width: 100%;
@@ -489,6 +491,15 @@ li{
 
 .sctn2{
     margin-top: -5rem;
+}
+
+.sctn3{
+
+    .bottom-sctn-3{
+        position: absolute;
+        width: 130%;
+        top: 0;
+    }
 }
 
 
