--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -154,7 +154,7 @@ li {
   text-transform: uppercase;
 }
 .sctn .content .first-container .main-text {
-  color: #AD8555;
+  color: #ad9654;
   display: grid;
   grid-template-rows: repeat(auto-fill, 3fr);
   justify-content: center;
