--- a/src/style/sass/main_components/_landing.scss
+++ b/src/style/sass/main_components/_landing.scss
@@ -214,7 +214,7 @@ li{
     
             .main-text{
                 // height: min-content;
-                color: #AD8555;
+                color: #ad9654;
                 display: grid;
                 grid-template-rows: repeat(auto-fill, 3fr);
                 justify-content: center;
